--- a/LotoFacilApp2/src/lotofacilapp/FXMLDocument.fxml
+++ b/LotoFacilApp2/src/lotofacilapp/FXMLDocument.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="639.0" prefWidth="596.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lotofacilapp.FXMLDocumentController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="639.0" prefWidth="677.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lotofacilapp.FXMLDocumentController">
     <children>
       <VBox layoutX="69.0" layoutY="28.0" prefHeight="600.0" prefWidth="728.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TitledPane animated="false" prefHeight="77.0" prefWidth="777.0" text="Loto Manager App v0.2b">
+            <TitledPane animated="false" prefHeight="63.0" prefWidth="649.0" text="Loto Manager App v0.3b">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="45.0" prefWidth="486.0">
                      <children>
@@ -21,7 +21,7 @@
                               <items>
                                     <MenuItem mnemonicParsing="false" onAction="#handleButtonActionBotaoCarregarJogos" text="Carregar Jogos" />
                                     <MenuItem mnemonicParsing="false" onAction="#handleButtonActionBotaoSalvarJogos" text="Salvar Jogos" />
-                                <MenuItem mnemonicParsing="false" text="Close" />
+                                <MenuItem mnemonicParsing="false" onAction="#handleMenuClose" text="Close" />
                               </items>
                             </Menu>
                             <Menu mnemonicParsing="false" text="Edit">
@@ -43,7 +43,7 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </TitledPane>
-            <Pane prefHeight="354.0" prefWidth="596.0">
+            <Pane prefHeight="333.0" prefWidth="615.0">
                <children>
                   <HBox />
                   <Label layoutX="13.0" layoutY="5.0" text="Tabela de Jogos Cadastrados">
@@ -51,27 +51,27 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextArea fx:id="TextAreaTabela" editable="false" layoutX="13.0" layoutY="32.0" prefHeight="227.0" prefWidth="520.0" />
+                  <TextArea fx:id="TextAreaTabela" editable="false" layoutX="13.0" layoutY="32.0" prefHeight="227.0" prefWidth="619.0" />
                   <Button fx:id="botaoApagarJogo" layoutX="438.0" layoutY="271.0" mnemonicParsing="false" onAction="#handleButtonActionApagarJogo" prefHeight="26.0" prefWidth="95.0" text="Apagar Jogo" />
-                  <TextField fx:id="LabelAPagar" layoutX="276.0" layoutY="271.0" prefHeight="26.0" prefWidth="43.0" />
-                  <Button layoutX="336.0" layoutY="271.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Editar Jogo" />
+                  <TextField fx:id="textFieldAPagar" layoutX="276.0" layoutY="271.0" prefHeight="26.0" prefWidth="43.0" />
+                  <Button fx:id="botaoEditarJogo" layoutX="336.0" layoutY="271.0" mnemonicParsing="false" onAction="#handleButtonActionEditarJogo" prefHeight="26.0" prefWidth="86.0" text="Editar Jogo" />
                   <Button fx:id="LimparTela" layoutX="14.0" layoutY="271.0" mnemonicParsing="false" onAction="#handleButtonActionLimparTela" prefHeight="26.0" prefWidth="103.0" text="Limpar Tela" />
                   <Button fx:id="botaoListarApostas" layoutX="141.0" layoutY="271.0" mnemonicParsing="false" onAction="#handleButtonActioListarApostas" prefHeight="26.0" prefWidth="103.0" text="Listar Apostas" />
                </children>
             </Pane>
             <Pane prefHeight="270.0" prefWidth="596.0">
                <children>
-                  <TextField fx:id="labelNovoJogo" layoutX="138.0" layoutY="98.0" prefHeight="26.0" prefWidth="381.0" />
-                  <TextField fx:id="labelConferirResultado" layoutX="145.0" layoutY="187.0" prefHeight="26.0" prefWidth="381.0" />
+                  <TextField fx:id="textFieldNovoJogo" layoutX="138.0" layoutY="98.0" prefHeight="26.0" prefWidth="381.0" />
+                  <TextField fx:id="textFieldConferirResultado" layoutX="145.0" layoutY="187.0" prefHeight="26.0" prefWidth="381.0" />
                   <Button fx:id="botaoNovoJogo" layoutX="14.0" layoutY="98.0" mnemonicParsing="false" onAction="#handleButtonActionNovoJogo" prefHeight="26.0" prefWidth="103.0" text="Novo" />
                   <Button fx:id="botaoConferir" layoutX="16.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleButtonActionConferir" prefHeight="26.0" prefWidth="103.0" text="Conferir" />
                   <Label layoutX="16.0" layoutY="14.0" text="Edição de jogos" />
-                  <CheckBox fx:id="megaCheck" layoutX="25.0" layoutY="48.0" mnemonicParsing="false" text="Mega Sena" />
-                  <CheckBox fx:id="facilCheck" layoutX="138.0" layoutY="48.0" mnemonicParsing="false" text="Loto Facil" />
-                  <CheckBox fx:id="maniaCheck" layoutX="234.0" layoutY="48.0" mnemonicParsing="false" text="Loto Mania" />
-                  <CheckBox fx:id="megaCheck2" layoutX="21.0" layoutY="154.0" mnemonicParsing="false" text="Mega Sena" />
-                  <CheckBox fx:id="facilCheck2" layoutX="136.0" layoutY="154.0" mnemonicParsing="false" text="Loto Facil" />
-                  <CheckBox fx:id="maniaCheck2" layoutX="234.0" layoutY="154.0" mnemonicParsing="false" text="Loto Mania" />
+                  <CheckBox fx:id="megaCheck" layoutX="25.0" layoutY="48.0" mnemonicParsing="false" onAction="#handleCheckMega" text="Mega Sena" />
+                  <CheckBox fx:id="facilCheck" layoutX="138.0" layoutY="48.0" mnemonicParsing="false" onAction="#handleCheckFacil" text="Loto Facil" />
+                  <CheckBox fx:id="maniaCheck" layoutX="234.0" layoutY="48.0" mnemonicParsing="false" onAction="#handleCheckMania" text="Loto Mania" />
+                  <CheckBox fx:id="megaCheck2" layoutX="21.0" layoutY="154.0" mnemonicParsing="false" onAction="#handleCheckMega2" text="Mega Sena" />
+                  <CheckBox fx:id="facilCheck2" layoutX="136.0" layoutY="154.0" mnemonicParsing="false" onAction="#handleCheckFacil2" text="Loto Facil" />
+                  <CheckBox fx:id="maniaCheck2" layoutX="234.0" layoutY="154.0" mnemonicParsing="false" onAction="#handleCheckMania2" text="Loto Mania" />
                </children>
             </Pane>
          </children>
